Finalize Phase 2: MLX90640Reader implementation and build integration

--- a/mlx90640-reader/CMakeLists.txt
+++ b/mlx90640-reader/CMakeLists.txt
@@ -1,25 +1,36 @@
 cmake_minimum_required(VERSION 3.16)
 project(mlx90640-reader)
 
-# Add the source files for this specific app
+# Sources for this target
 set(SOURCES
     src/main.cpp
     src/MLX90640Reader.cpp
-    src/MLX90640Reader.h
-    # add more if needed
 )
 
-# Add executable
+# Executable target
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-# Link to shared library (libduosight)
+# Link to shared duosight library
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
         duosight
 )
 
-# Include libduosight headers
+# Include headers from duosight and mlx90640-library
 target_include_directories(${PROJECT_NAME}
     PRIVATE
-        ${PROJECT_SOURCE_DIR}/../libduosight/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/../libduosight/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/../mlx90640-library/headers
+)
+
+# Link MLX90640_API.c manually from submodule
+target_sources(${PROJECT_NAME}
+    PRIVATE
+        ${CMAKE_CURRENT_SOURCE_DIR}/../mlx90640-library/functions/MLX90640_API.c
+)
+
+# Link standard math library if needed
+target_link_libraries(${PROJECT_NAME}
+    PRIVATE
+        m
 )
