--- a/libduosight/CMakeLists.txt
+++ b/libduosight/CMakeLists.txt
@@ -2,15 +2,17 @@
 
 # Define the library target
 add_library(duosight STATIC
-    src/i2c_utils.cpp
-    src/platform_abstraction.cpp
-    # add more source files as needed
+    src/i2cUtils.cpp
+    src/mlx90640Transport.cpp                           # ← transport layer with I2C handlers
+    ${CMAKE_CURRENT_SOURCE_DIR}/../mlx90640-library/functions/MLX90640_API.c  # ← Melexis API core
 )
+
 
 # Include the public headers
 target_include_directories(duosight
     PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_SOURCE_DIR}/mlx90640-library/headers 
 )
 
 # Add any required system libraries here
