--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "CMAKE_TOOLCHAIN_FILE": "/opt/sdk/sysroots/x86_64-tdxsdk-linux/usr/share/cmake/OEToolchainConfig.cmake"
   },
   "cmake.generator": "Unix Makefiles",
-  "cmake.buildDirectory": "${workspaceFolder}/build"
+  "cmake.buildDirectory": "${workspaceFolder}/build",
+  "files.associations": {
+    "ostream": "cpp"
+  }
 }
