--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mlx90640-library"]
 	path = mlx90640-library
-	url = https://github.com/melexis/mlx90640-library.git
+	url = git@github.com:HBL001/mlx90640-library.git
