Fix my buggy CMakeLists - were not linking properly

--- a/mlx90640-reader/CMakeLists.txt
+++ b/mlx90640-reader/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 project(mlx90640-reader)
 
+# Find required Qt5 modules
+find_package(Qt5 REQUIRED COMPONENTS Widgets Gui Core)
+
 # Sources
 set(SOURCES
     src/main.cpp
@@ -22,5 +25,8 @@ target_include_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
         duosight
+        Qt5::Widgets
+        Qt5::Gui
+        Qt5::Core
         m
 )
